// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Reply> renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "rgb(255, 255, 255)",
          "borderBottomWidth": 3,
          "margin": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        }
      }
    >
      <Avatar
        avatarPath={
          Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          }
        }
        size="small"
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          small={true}
          text="Empodere Duas Mulheres"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          Há um ano
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            },
            "id": "1235we",
            "name": "Empodere Duas Mulheres",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "id": "21097",
          "isAuthorCurrentUser": false,
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;

exports[`Comments<Reply> renders correctly when edited 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "rgb(255, 255, 255)",
          "borderBottomWidth": 3,
          "margin": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingVertical": 10,
        }
      }
    >
      <Avatar
        avatarPath={
          Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          }
        }
        size="small"
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          small={true}
          text="Empodere Duas Mulheres"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          Há um ano
           (Editada)
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 20,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": true,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/empower_two_women_logo.png",
            },
            "id": "1235we",
            "name": "Empodere Duas Mulheres",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "id": "21097",
          "isAuthorCurrentUser": false,
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": true,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;
